--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>GoBarber 2020</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
